# apps/api/src/travel-providers/travel-providers.module.ts
@@ -1,0 +1,10 @@
+import { Module } from '@nestjs/common';
+import { TravelProvidersController } from './travel-providers.controller';
+import { TravelProvidersService } from './travel-providers.service';
+
+@Module({
+  controllers: [TravelProvidersController],
+  providers: [TravelProvidersService],
+  exports: [TravelProvidersService],
+})
+export class TravelProvidersModule {}
